--- a/DataSourceTest/build.gradle
+++ b/DataSourceTest/build.gradle
@@ -22,6 +22,7 @@ ext {
   mysqlVersion = '5.1.31'
   springVersion = '4.0.6.RELEASE'
   logbackVersion = '1.1.2'
+  tomcat8Version = '8.0.14'
 }
 
 targetCompatibility = 1.8
