Update to work with gradle 7.2, java 11, gretty 3.0.6
Also fixed incorrect task name in README. Should be appRun not app.

--- a/DataSourceTest/build.gradle
+++ b/DataSourceTest/build.gradle
@@ -4,9 +4,12 @@ buildscript {
     jcenter()
   }
 
-  dependencies {
-    classpath('org.akhikhl.gretty:gretty:1.1.5-SNAPSHOT')
-  }
+}
+
+plugins {
+    id 'java'
+    id 'war'
+    id 'org.gretty' version '3.0.6'
 }
 
 repositories {
@@ -14,29 +17,26 @@ repositories {
   jcenter()
 }
 
-apply plugin: "java"
-apply plugin: "war"
-apply plugin: 'org.akhikhl.gretty'
-
 ext {
   mysqlVersion = '5.1.31'
   springVersion = '4.0.6.RELEASE'
   logbackVersion = '1.1.2'
 }
 
-targetCompatibility = 1.8
-sourceCompatibility = 1.8
+compileJava {
+	options.release = 11
+}
 
 dependencies {
   gretty "mysql:mysql-connector-java:$mysqlVersion"
-  gretty "org.apache.tomcat:tomcat-dbcp:$tomcat8Version"
-  compile "org.springframework:spring-webmvc:$springVersion"
-  compile "org.springframework:spring-jdbc:$springVersion"
-  compile "ch.qos.logback:logback-classic:$logbackVersion"
+  gretty "org.apache.tomcat:tomcat-dbcp:$tomcat9Version"
+  implementation "org.springframework:spring-webmvc:$springVersion"
+  implementation "org.springframework:spring-jdbc:$springVersion"
+  implementation "ch.qos.logback:logback-classic:$logbackVersion"
 }
 
 gretty {
-  servletContainer = 'tomcat8'
+  servletContainer = 'tomcat9'
   httpPort = 9090
   enableNaming = true
 }
